# VideoCompanion

./: .gitignore  README.md
app/: main.py  pyproject.toml
docker/: docker-compose.yml
frontent/chrome_extension/: manifest.json  service-worker.js  sidepanel.html  sidepanel.js  styles.css
gradio_app/: app.py  pyproject.toml
gradio_app/.gradio/flagged/: dataset1.csv
video_content_search/: pyproject.toml
video_content_search/notebooks/: Gemini.ipynb
video_content_search/tests/video_content_search/: test_extract_modalities.py  test_preprocess.py
video_content_search/video_content_search/: add_documents.py  create_transcript.py  extract_audio.py  extract_modalities.py  preprocess.py  utils.py
video_content_search/video_content_search/search/: multimodal_vector_store.py  retrieve_logic.py  vector_store.py
