[tool.poetry]
name = "video-companion"
version = "0.1.0"
description = ""
authors = ["Sunshine"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
fastapi = "^0.115.0"
uvicorn = "^0.31.0"
video-content-search = {path = "../video_content_search"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
